# PC-project

./: .gitignore  Address.csv  CMakeLists.txt  README.md  Student.csv  a.txt  main.ipynb  run_ux.sh  time.txt
data/: Addresses.csv  Student.csv  output.csv  output.txt  query1.txt  query2.txt  query3.txt  query4.txt  query5.txt  table1.csv  table4.csv  table_1.csv  table_2.csv  table_3.csv  table_4.csv  table_5.csv
data_small/: Employee.csv  Orders.csv  Product.csv
include/constants/: data_types.hpp  db.hpp
include/dbms/: csv_importer.hpp  duckdb_interface.hpp  gpu_executor.hpp  profiler.hpp
include/kernels/: aggregate_kernel.hpp  filter_kernel.hpp  hash_join.hpp  hash_join_kernel.hpp  order_by.hpp
include/kernels/aggregate/: count_kernel.hpp  count_star_kernel.hpp  (+3 more)
include/physical_plan/: aggregate.hpp  chat.hpp  filter.hpp  join.hpp  nested_join.hpp  order_by.hpp  physical_op.hpp  projection.hpp  seq_scan.hpp
queries_big/: query1.txt  query10.txt  query2.txt  query4.txt  query5.txt  query6.txt  query7.txt  query8.txt  query9.txt
queries_small/: query1.txt  query10.txt  query2.txt  query3.txt  query4.txt  query5.txt  query6.txt  query7.txt  query9.txt
script/: create_dataset.py
src/: csv_importer.cpp  duckdb_interface.cpp  executer.cpp  gpu_executor.cu  main.cpp  profiler.cpp
src/kernels/: aggregate_kernel.cu  filter_kernel.cu  hash_join.cu  hash_join_kernel.cu  order_by.cu  order_by_kernel.cu
src/physical_plan/: aggregate.cpp  aggregate.cu  filter.cpp  filter.cu  join.cu  nested_join.cu  order_by.cu  physical_op.cpp  projection.cpp  seq_scan.cpp
(+5 files in other folders)
